Fixed overflow issue on nav, removed contact bar from block two

--- a/wp-content/themes/adtrak-child/scss/components/_buttons.scss
+++ b/wp-content/themes/adtrak-child/scss/components/_buttons.scss
@@ -15,9 +15,8 @@ button, .btn {
     text-align: center;
     
     &:hover {
-        background: $noir;
-        color: $blanc;
-        border-color: $blanc;
+        background: lighten($blue, 70%);
+        color: $blue;
         text-decoration: none;
     }
 
