--- a/wp-content/themes/adtrak-child/scss/layout/_navigation.scss
+++ b/wp-content/themes/adtrak-child/scss/layout/_navigation.scss
@@ -81,6 +81,7 @@
             transition: .3s;
             padding: 0px;
             background: $blue;
+            display: block;
 
             @include bp1200 {
                 width: 550px;
